--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@openzeppelin/test-environment": "^0.1.6",
     "@openzeppelin/test-helpers": "^0.5.9",
     "chai": "^4.2.0",
-    "mocha": "^8.2.1"
+    "mocha": "^8.2.1",
+    "truffle-plugin-verify": "^0.5.28"
   }
 }
